force-app/main/default/objects/Incident_Bank_Relationship__c/Incident_Bank_Relationship__c.object-meta.xml
<CustomObject>
    <label>Incident Bank Relationship</label>
    <nameField>
        <displayFormat>IBR-{00000000}</displayFormat>
        <label>Incident Bank Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Bank Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>