force-app/main/default/objects/Incident_Bank_Relationship__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Incident Bank Relationships</relationshipLabel>
    <relationshipName>Incident_Bank_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>